# fantasyAutomator

./: .gitignore  README.md  main.py  mlb_api_exploration.ipynb  pyproject.toml  requirements.txt  stats_headers.json  stats_headers.py  teams.json
models/: base.py  exceptions.py  game.py  player.py  team.py
src/: __init__.py
src/connections/: mlb_api.py
src/models/: game.py  season.py  team.py
